Fix overlapping Waterfall/RDS panels

--- a/spectrum/static/styles.css
+++ b/spectrum/static/styles.css
@@ -64,11 +64,10 @@ form.controls {
 }
 psm-waterfall .waterfall {
   position: relative;
-  top: 40px;
+  margin-top: 40px;
 }
 psm-waterfall svg {
   position: relative;
-  top: -40px;
   z-index: 1;
 }
 psm-waterfall canvas {
@@ -78,7 +77,7 @@ psm-waterfall canvas {
   width: 100%;
 }
 psm-waterfall .infoText {
-	margin-right: 50px;
+  margin-right: 50px;
 }
 rect.audio {
   fill: green;
